--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <bod>
+    <title>Test</title>
+  </bod>
+  <body>
+    
+  </body>
+  
+</html>
