--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  <bod>
+  <head>
     <title>Test</title>
-  </bod>
+  </head>
   <body>
     
   </body>
